# MatrixMD

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp  run.sh
include/: blockparser.h  breaklineparser.h  checklistparser.h  codeblockparser.h  emphasizedparser.h  headlineparser.h  horizontallineparser.h  htmlparser.h  imageparser.h  inlinecodeparser.h  italicparser.h  latexblockparser.h  lineparser.h  lineparsers.h  linkparser.h  orderedlistparser.h  paragraphparser.h  parser.h  parserconfig.h  quoteparser.h  strikethroughparser.h  strongparser.h  tableparser.h  unorderedlistparser.h
src/: lineparsers.cpp  parser.cpp
